WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127399
The IDB backing store put() method shouldn't call IDB callbacks directly
https://bugs.webkit.org/show_bug.cgi?id=127399
Summary
The IDB backing store put() method shouldn't call IDB callbacks directly
Brady Eidson
Reported
2014-01-21 20:28:20 PST
The IDB backing store put() method shouldn't call IDB callbacks directly Callbacks are not something the backing store should know about *anywhere*, and we'll be factoring them out as they come up.
Attachments
Patch v1
(15.96 KB, patch)
2014-01-21 20:30 PST
,
Brady Eidson
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2014-01-21 20:30:53 PST
Created
attachment 221822
[details]
Patch v1
Brady Eidson
Comment 2
2014-01-21 21:16:24 PST
http://trac.webkit.org/changeset/162501
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug