The IDB backing store put() method shouldn't call IDB callbacks directly https://bugs.webkit.org/show_bug.cgi?id=127399

Reviewed by Beth Dakin.

Source/WebCore:

Refactor the put() callback to take a resulting key or an error.
* Modules/indexeddb/IDBServerConnection.h:

* Modules/indexeddb/IDBTransactionBackendOperations.cpp:
(WebCore::PutOperation::perform): Call to the backing store, then perform the
  appropriate IDB callback whether a key or an error was returned.
* Modules/indexeddb/IDBTransactionBackendOperations.h:

* Modules/indexeddb/leveldb/IDBServerConnectionLevelDB.cpp:
(WebCore::IDBServerConnectionLevelDB::put): Don’t call IDB callbacks directly.
  Instead, pass the resulting key/error back to the PutOperation.
* Modules/indexeddb/leveldb/IDBServerConnectionLevelDB.h:

Source/WebKit2:

* WebProcess/Databases/IndexedDB/WebIDBServerConnection.cpp:
(WebKit::WebIDBServerConnection::put):
* WebProcess/Databases/IndexedDB/WebIDBServerConnection.h:

Canonical link: https://commits.webkit.org/145404@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162501 268f45cc-cd09-0410-ab3c-d52691b4dbfc